Worked on Recursive Types

--- a/ProtocolResearch/2018-07-01.md
+++ b/ProtocolResearch/2018-07-01.md
@@ -10,6 +10,8 @@ So simply put, type synonyms cannot be cyclic and are fully evaluated, but data 
 
 Can a type feature two fix points? The HTTP session type might need that, unless we allow for concatenation of session types.
 
+`? String; Fix x (! Int; ? String; x); ! Int` is the same as `Fix x (? String; ! Int; x)` intuitively. They aren't actually
+
 ### [Recursive Subtypes](http://lucacardelli.name/papers/srt.pdf)
 
 This is apparently correct: `(s<:t implies a<:b) implies µs.a <: µt.b`. Checking that `s<:t implies a<:b` is not trivial without fixpoints being explicitly represented (since `µs.[s] == µt.[[t]]`), but with a unique representation of fixpoints this can be checked, though the code will be complicated.
@@ -17,3 +19,5 @@ This is apparently correct: `(s<:t implies a<:b) implies µs.a <: µt.b`. Checki
 ## Thoughts
 
 I wonder if it's easy to check if a regular language is a subset of another regular language by comparing minimal DFAs.
+
+UDP might be simpler than TCP.
