Finished notes for 3/7

--- a/ProtocolResearch/2018-07-03.md
+++ b/ProtocolResearch/2018-07-03.md
@@ -16,17 +16,42 @@ Note that HTTP 1.1 is not a subtype of HTTP 1.0, and hence the two will be marke
 
 What is a pseudo-header? Is this part of IP?
 
-UDP "Client": `µt. (+{ send: !UDPPacket, wait: end }; &{ reply: ?UDPPacket, none: end }; t )`
+UDP "Client": `!UDPPacket; µt. +{ request: !UDPPacket; t, response: ?UDPPacket; t, end: end }`
 
-UDP "Server": `µt. (&{ send: ?UDPPacket, wait: end }; +{ reply: !UDPPacket, none: end }; t )`
-
-This makes the protocol look more complicated than it really is, in order to enforce a client-server role on this communication.
+UDP "Server": `?UDPPacket; µt. &{ request: ?UDPPacket; t, response: !UDPPacket; t, end: end }`
 
 ## [TCP Protocol](https://tools.ietf.org/html/rfc793)
 
 Simple Handshake: `!SynTCP; ?SynAckTCP; !AckTCP`
 
 This protocol is so complex it looks more like both parties are simply throwing packets at each other rather than anything more structured. The potential for re-ordering of packets and crashes complicate this further. A session type like UDP's would cover this behavior.
+
+TCP:
+
+```
+TCPHandshake =
+    !SynTCPPacket;
+    ?SynAckTCPPacket;
+    !AckTCPPacket  
+TCPFinish =
+    !FinTCPPacket;
+    µt. &{
+        continue: ?TCPPacket; t,
+        end: ?FinTCPPacket; !AckTCPPacket
+    }
+TCP =
+    TCPHandshake;
+    µt. +{
+        request: +{
+            continue: !TCPPacket; t,
+            end: TCPFinish
+        },
+        response: &{
+            continue: ?TCPPacket; t,
+            end: dual TCPFinish
+        }
+    }
+```
 
 ## Weaknesses of new Session Types model
 
