Finished notes from 7/7

--- a/ProtocolResearch/2018-07-07.md
+++ b/ProtocolResearch/2018-07-07.md
@@ -5,3 +5,7 @@
 In the current implementation, there are two ways of expressing the protocol of sending either an Int or Bool followed by an Int; `+{ int: !Int, bool: !Bool }; !Int` or `+{ int: !Int; !Int, bool: !Bool; !Int }`, and there are many ways of expressing the protocol where both parties alternate sending, until the same person that sent the first message sends the last one; `!String; µt. &{ continue: ?String; !String; t, end: end }` or `µt. +{ continue: !String; ?String; t, end: !String }`. In some ways, these have different meanings, but since they represent the same messages being sent there could be issues where automata are incorrectly marked as incompatible because their protocols were expressed differently.
 
 The first example could be avoided by not allowing certain protocols to be concatenated to, for example a choose or offer must be at the end of any string, and trying to construct `+{a:b, c:d}; e` will result in `+{a:b;e, c:d;e}`. The code for concatenation under this model may be messy. It seems we cannot do a similar thing to fixpoints, and even if we could it wouldn't result in a unique representation of protocols.
+
+## Simple Protocols
+
+[ICMP Echo](https://tools.ietf.org/html/rfc862): `µt. (!Bytes; ?Bytes; +{ sendMore: t, end: end })`
