Finished notes for 14/7

--- a/ProtocolResearch/2018-07-14.md
+++ b/ProtocolResearch/2018-07-14.md
@@ -7,3 +7,5 @@ According to [this paper](http://citeseerx.ist.psu.edu/viewdoc/download;jsession
 What about subtyping though. At the moment, checking subtypes of fixed points is done by assuming the bound variables satisfy the subtype relation and checking if that makes the contents satisfy it. However, if we are aiming for a more complete (lenient) comparison, we might have to do more complicated comparisons. For example, `µt. &{a: !Bool; &{b:end}, b:end}` should be a suptype of `µt. &{a: !Bool; t, b: end}`.
 
 Haskell uses isorecursive types, these are easy to work with and compare. If we can have equirecursive types that would be great, but I do not believe this is possible with subtyping.
+
+Maybe if session types were treated as labelled directed graphs it would be possible to determine subtyping and equality in O(n^2) time.
